# prefect-workflow-example

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  pyproject.toml
data/: users_1669117338.csv
notebooks/: test.ipynb
src/: etl.prof  etl_example.py  output.html  prefect_flow-deployment.yaml
tests/: test_etl_example.py
