[tool.poetry]
name = "pandas"
version = "0.1.0"
description = ""
authors = ["whanyu1212 <107110503+whanyu1212@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
prefect = "^2.5.0"
requests = "^2.28.1"
pytest = "^7.1.3"
black = "^22.10.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
interrogate = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
